fix: remove-from-source not working with interactive mode also refactor to make interactive specific bugs less likely
